[package]
name = "redir"
version = "0.1.7"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.1.9", features = ["derive", "wrap_help"] }
directories = "4.0.1"
hashbrown = { version = "0.13.2", features = ["serde"] }
regex = "1.7.1"
serde = { version = "1.0.156", features = ["derive"] }
serde_json = "1.0.94"
thiserror = "1.0.39"
